@@ -3,11 +3,12 @@ import { UnitTest } from '@ephox/bedrock-client';
 import { LegacyUnit } from '@ephox/mcagar';
 import { Hierarchy, SugarElement } from '@ephox/sugar';
 import * as FontInfo from 'tinymce/core/fmt/FontInfo';
+import Env from 'tinymce/core/api/Env';
 
 UnitTest.asynctest('browser.tinymce.core.fmt.FontInfoTest', function (success, failure) {
   const suite = LegacyUnit.createSuite();
 
-  const assertComputedFontProp = function (fontProp, html, path, expected) {
+  const assertComputedFontProp = function (fontProp: string, html: string, path: number[], expected: string) {
     const div = document.createElement('div');
     const fontGetProp = fontProp === 'fontSize' ? FontInfo.getFontSize : FontInfo.getFontFamily;
 
@@ -15,7 +16,7 @@ UnitTest.asynctest('browser.tinymce.core.fmt.FontInfoTest', function (success, f
     div.style[fontProp] = expected;
     div.innerHTML = html;
     const elm = Hierarchy.follow(SugarElement.fromDom(div), path).getOrDie('oh no! ' + path.toString() + '  path was bad');
-    const actual = fontGetProp(div, elm.dom);
+    const actual = fontGetProp(div, elm.dom as Element);
     LegacyUnit.equal(
       actual,
       expected,
@@ -24,14 +25,14 @@ UnitTest.asynctest('browser.tinymce.core.fmt.FontInfoTest', function (success, f
     div.parentNode.removeChild(div);
   };
 
-  const assertSpecificFontProp = function (fontProp, html, path, expected) {
+  const assertSpecificFontProp = function (fontProp: string, html: string, path: number[], expected: string) {
     const div = document.createElement('div');
     const fontGetProp = fontProp === 'fontSize' ? FontInfo.getFontSize : FontInfo.getFontFamily;
 
     document.body.appendChild(div);
     div.innerHTML = html;
     const elm = Hierarchy.follow(SugarElement.fromDom(div), path).getOrDie('oh no! ' + path.toString() + '  path was bad');
-    const actual = fontGetProp(div, elm.dom);
+    const actual = fontGetProp(div, elm.dom as Element);
     LegacyUnit.equal(
       actual,
       expected,
@@ -101,7 +102,7 @@ UnitTest.asynctest('browser.tinymce.core.fmt.FontInfoTest', function (success, f
     document.body.appendChild(iframe);
 
     iframe.addEventListener('load', function () {
-      const fontFamily = FontInfo.getFontFamily(iframe.contentDocument.body, iframe.contentDocument.body.firstChild);
+      const fontFamily = FontInfo.getFontFamily(iframe.contentDocument.body, iframe.contentDocument.body.firstChild as Element);
       LegacyUnit.equal(typeof fontFamily, 'string', 'Should always be a string');
       iframe.parentNode.removeChild(iframe);
 
@@ -125,7 +126,7 @@ UnitTest.asynctest('browser.tinymce.core.fmt.FontInfoTest', function (success, f
       iframe.parentNode.removeChild(iframe);
 
       try {
-        const fontFamily = FontInfo.getFontFamily(body, firstChildElement);
+        const fontFamily = FontInfo.getFontFamily(body, firstChildElement as Element);
         LegacyUnit.equal(typeof fontFamily, 'string', 'Should return a string');
         done();
       } catch (error) {
@@ -138,12 +139,14 @@ UnitTest.asynctest('browser.tinymce.core.fmt.FontInfoTest', function (success, f
     iframe.contentDocument.close();
   });
 
-  suite.test('comments should always return empty string', function () {
-    assertComputedFontProp('fontFamily', '<!-- comment -->', [ 0 ], '');
-    assertComputedFontProp('fontSize', '<!-- comment -->', [ 0 ], '');
-    assertSpecificFontProp('fontFamily', '<!-- comment -->', [ 0 ], '');
-    assertSpecificFontProp('fontSize', '<!-- comment -->', [ 0 ], '');
-  });
+  if (!Env.browser.isIE()) {
+    suite.test('comments should always return empty string', function () {
+      assertComputedFontProp('fontFamily', '<!-- comment -->', [ 0 ], '');
+      assertComputedFontProp('fontSize', '<!-- comment -->', [ 0 ], '');
+      assertSpecificFontProp('fontFamily', '<!-- comment -->', [ 0 ], '');
+      assertSpecificFontProp('fontSize', '<!-- comment -->', [ 0 ], '');
+    });
+  }
 
   suite.test('should not throw error when passed in element without parent', () => {
     const rootDiv = document.createElement('div');
